--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,17 +27,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "collected_data = []\n",
     "\n",
-    "cap=cv.VideoCapture(0)\n",
+    "cap = cv.VideoCapture(0)\n",
     "\n",
     "collected_data = []\n",
     "\n",
     "with mp_holistic.Holistic(min_detection_confidence=0.5, min_tracking_confidence=0.5) as holistic:\n",
-    "    for label in range(ord('A'), ord('Z')+1):  \n",
+    "    for label in range(ord('A'), ord('Z')+1):\n",
     "        label_char = chr(label)\n",
     "        \n",
-    "        for _ in range(2): \n",
+    "        for _ in range(10):\n",
+    "            print(f\"Collecting data for label: {label_char}\")\n",
+    "\n",
+    "            while cap.isOpened():\n",
+    "                ret, frame = cap.read()\n",
+    "\n",
+    "                if not ret:\n",
+    "                    print(\"Failed to capture frame\")\n",
+    "                    break\n",
+    "\n",
+    "                img = cv.cvtColor(frame, cv.COLOR_BGR2RGB)\n",
+    "                results = holistic.process(img)\n",
+    "\n",
+    "                img = cv.cvtColor(img, cv.COLOR_RGB2BGR)\n",
+    "                mp_drawing.draw_landmarks(img, results.right_hand_landmarks, mp_holistic.HAND_CONNECTIONS,\n",
+    "                                           mp_drawing.DrawingSpec(color=(0, 0, 255), thickness=2, circle_radius=2),\n",
+    "                                           mp_drawing.DrawingSpec(color=(0, 255, 0), thickness=2, circle_radius=2))\n",
+    "\n",
+    "                mp_drawing.draw_landmarks(img, results.left_hand_landmarks, mp_holistic.HAND_CONNECTIONS,\n",
+    "                                           mp_drawing.DrawingSpec(color=(0, 0, 255), thickness=2, circle_radius=2),\n",
+    "                                           mp_drawing.DrawingSpec(color=(0, 255, 0), thickness=2, circle_radius=2))\n",
+    "\n",
+    "                cv.imshow('Video Capture', img)\n",
+    "\n",
+    "                key = cv.waitKey(10)\n",
+    "                if key == ord(label_char):\n",
+    "                    hand_landmarks = results.right_hand_landmarks\n",
+    "                    collected_data.append((hand_landmarks, label_char))\n",
+    "\n",
+    "                elif key == ord('d'):\n",
+    "                    break\n",
+    "\n",
+    "    for label in range(48, 58): \n",
+    "        label_char = chr(label)\n",
+    "        \n",
+    "        for _ in range(10):\n",
     "            print(f\"Collecting data for label: {label_char}\")\n",
     "\n",
     "            while cap.isOpened():\n",
@@ -72,7 +106,43 @@
     "    np.save('collected_data.npy', collected_data)\n",
     "\n",
     "cap.release()\n",
-    "cv.destroyAllWindows()"
+    "cv.destroyAllWindows()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pickle\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "data = np.load('collected_data.npy', allow_pickle=True)\n",
+    "\n",
+    "\n",
+    "X = [data[0] for data in collected_data]\n",
+    "y = [data[1] for data in collected_data]\n",
+    "\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, train_size=0.9, random_state=42)\n",
+    "\n",
+    "X_train_flat = [np.concatenate(hand_landmarks) for hand_landmarks in X_train]\n",
+    "X_test_flat = [np.concatenate(hand_landmarks) for hand_landmarks in X_test]\n",
+    "\n",
+    "model = RandomForestClassifier(random_state=42)\n",
+    "model.fit(X_train_flat, y_train)\n",
+    "\n",
+    "y_pred = model.predict(X_test_flat)\n",
+    "\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(f\"Accuracy: {accuracy}\")\n",
+    "\n",
+    "with open('model.pkl', 'wb') as model_file:\n",
+    "    pickle.dump(model, model_file)\n"
    ]
   }
  ],
